try to use the checkout context

--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -8,6 +8,10 @@ jobs:
   get-release:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+        with:
+          ssh-key: "${{ secrets.COMMIT_KEY }}"
       - name: Compare releases
         id: compare-releases
         uses: NickLiffen/compare-releases@v2.0.4
@@ -24,7 +28,7 @@ jobs:
         if: steps.checkTag.outputs.exists == 'false'
         uses: mathieudutour/github-tag-action@v6.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          #github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: ${{ steps.compare-releases.outputs.tagName }}
           tag_prefix: ''
       - name: Create a GitHub release
