--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,11 +32,11 @@ jobs:
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v4
         with:
           images: |
-            cardonator/docker-kavita
-            ghcr.io/${{ github.repository }}
+            name=cardonator/docker-kavita
+            name=ghcr.io/${{ github.repository }}
       
       - name: Build and push Docker images
         uses: docker/build-push-action@v1
