--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -8,24 +8,22 @@ jobs:
   get-release:
     runs-on: ubuntu-latest
     steps:
-      - name: Compare releases
-        id: compare-releases
-        uses: NickLiffen/compare-releases@v2.0.4
+      - uses: oprypin/find-latest-tag@v1
         with:
-          destinationRepository: Kareadita/Kavita
-          sourceRepository: cardonator/docker-kavita
-          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: Kareadita/Kavita
+          releases-only: true
+        id: compare-releases
       - uses: mukunku/tag-exists-action@v1.2.0
         id: checkTag
         with: 
-          tag: ${{ steps.compare-releases.outputs.tagName }}
+          tag: ${{ steps.compare-releases.outputs.tag }}
       - name: Bump version and push tag
         id: tag_version
         if: steps.checkTag.outputs.exists == 'false'
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.ACTIONS_PAT }}
-          custom_tag: ${{ steps.compare-releases.outputs.tagName }}
+          custom_tag: ${{ steps.compare-releases.outputs.tag }}
           tag_prefix: ''
       - name: Create a GitHub release
         if: steps.checkTag.outputs.exists == 'false'
